Revert "enhanced Ui"
This reverts commit 97f917b3a84fdbd739cb552f957d674a79011cf2.

--- a/website/blog/templates/panel.html
+++ b/website/blog/templates/panel.html
@@ -23,10 +23,7 @@ const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
 
                     return fetch(request, {
                         method: "DELETE",
-                        headers: new Headers({"content-type": "application/json",
-        "X-Requested-With": "XMLHttpRequest",
-   "X-CSRFToken": csrftoken }),
-                        body: JSON.stringify({"slug": event.target.id}), }).then(response => response.json().then(
+                        body: {"id": event.target.id}, }).then(response => response.text().then(
                         data =>  ({"status": "200", body: data})))}
                 }
         );
