--- a/website/blog/templates/category.html
+++ b/website/blog/templates/category.html
@@ -15,24 +15,14 @@
 
 
 <style>
-.container-fluid {
-    width: 90%;
-    margin-right: auto;
- 
-    margin-left: auto;
-    padding: 0.1em;
 
-}
-.mb-2{	
-	margin-right: 0;
-	margin-left: 0;
-    width: fit-content;
-}
 .cats {
-    box-shadow: 0px 5px 2px rgb(0 0 0 / 10%);
-    padding: 0.3em;
-    border-radius: 5px;
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
+  background-color: black;
+  padding: 0.3em;
+  border-radius: 5px;  
 }
+
  
 .cats a {
   font-size: 15px;
@@ -70,7 +60,12 @@ margin-right: auto;
 
 }
 
+.row {
 
+margin-left: auto;
+margin-right: auto;
+
+}
 body {
 			font-family: "Lato", sans-serif;
 			-webkit-font-smoothing: antialiased;
@@ -117,17 +112,13 @@ margin: 0 0 0.35em;
 
 <div class="row mb-2">
 {% for c in articles %}
-<div class="card" style="width: 30rem; font-size: 19px;">
-   <img src="{{MEDIA_URL}}{{c.img}}" class="card-img-top"  width="512px" height="512px" max-width="fit-content" max-height="fit-content" alt="{{c.title}}">
+<div class="card" style="width: 18rem;">
+   <img src="{{MEDIA_URL}}/{{c.img}}" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">{{ c.title }}</h5>
     {% with ct=c.content|safe %}
-    <p class="card-text">{{ ct|slice:"500"}}...</p>
+    <p class="card-text">{{ ct|slice:"65"}}...</p>
     {% endwith %}
-
-<div style="margin-top:1em; margin-bottom:1em;">
- <a href="/article/{{c.slug}}" class="btn btn-primary">Continue</a>
-</div> 
 
 <!-- card footer -->
 <div class="card-footer">
@@ -140,7 +131,10 @@ margin: 0 0 0.35em;
     {% endfor %}
 </div>
 
-<!-- end cats -->
+<!-- tags -->
+<div style="margin-top:1em;">
+ <a href="/article/{{c.slug}}" class="btn btn-primary">Continue</a>
+</div>
 
 </div>
 <!-- end card-footer -->
