--- a/website/blog/templates/category.html
+++ b/website/blog/templates/category.html
@@ -6,34 +6,32 @@
 <!--
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
 -->
-<link href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400"/>
 <link rel="stylesheet" href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css"/>
+
+
+<link href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" rel="stylesheet">
+
+
 <!--
 <script src="{% static 'script.js' %}"></script>
 -->
 
 
 <style>
-.container-fluid {
-    width: 90%;
-    margin-right: auto;
- 
-    margin-left: auto;
-    padding: 0.1em;
 
-}
-.mb-2{	
-	margin-right: 0;
-	margin-left: 0;
-    width: fit-content;
-}
 .cats {
     box-shadow: 0px 5px 2px rgb(0 0 0 / 10%);
     padding: 0.3em;
     border-radius: 5px;
 }
  
+.container-fluid {
+    margin-right: auto;
+    background-color: #3d5c76;
+    margin-left: auto;
+
+}
 .cats a {
   font-size: 15px;
   text-decoration: none;
@@ -70,37 +68,39 @@ margin-right: auto;
 
 }
 
+.row {
 
+margin-left: auto;
+margin-right: auto;
+
+}
 body {
 			font-family: "Lato", sans-serif;
 			-webkit-font-smoothing: antialiased;
 
-}
-h1, h2, h3 {
-margin: 0 0 0.35em;
 }
 </style>
 
     <meta charset="UTF-8">
     <title>home</title>
 </head>
-
 <div class="container-fluid">
 <header>
+
+
 <nav class = "navbar navbar-expand-md navbar-dark bg-dark">
 <div class="collapse navbar-collapse">
 <ul class="navbar-nav mr-auto">
 <li class="nav-item"><a class="nav-link disabled" href="/"> home </a> </li>
-
 {% for c in categories %}
 
 {% if forloop.first %}
-    <li class="nav-item active"><a class="nav-link" href="{{c.slug}}">
+    <li class="nav-item active"><a class="nav-link" href="category/{{c.slug}}">
     {{c.name}}
     </a>
     </li>
 {% else %}
-<li class="nav-item"><a class="nav-link disabled" href="{{c.slug}}">
+<li class="nav-item"><a class="nav-link disabled" href="category/{{c.slug}}">
     {{c.name}}
     </a>
     </li>
