--- a/website/blog/templates/login.html
+++ b/website/blog/templates/login.html
@@ -8,121 +8,46 @@
 <script>
 jQuery(document).on( "keydown", ".normal", function(e){if (e.keyCode == 13) {return false;} });
 </script>
-
-<script src="http://bootstrap-tagsinput.github.io/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js"></script> 
-  	<title>Login to CMS</title>
-    <meta charset="utf-8">
-<link rel="stylesheet" href="http://bootstrap-tagsinput.github.io/bootstrap-tagsinput/dist/bootstrap-tagsinput.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
-<link rel="stylesheet" href="/static/sidebar-09/css/style.css">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
 <style>
-.label-info {
-    background-color: #5bc0de;
-}
-.label {
-    display: inline;
-    padding: .2em .6em .3em;
-    font-size: 75%;
-    font-weight: 700;
-    line-height: 1;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: baseline;
-    border-radius: .25em;
-}
-.label-info {
-    background-color: #5bc0de;
-}
-select {
-  text-align-last: center;
-  width: fit-content;
-}
-
-
-select {
-  width: fit-content;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-
-}
-
-input[type=text].normal {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-
-h1, h2, h3{
-margin-left: auto;
-margin-right: auto;
-}
-
-input[type=submit].normal{
-  width: 100%;
-  background-color: #04AA6D;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-
-
-input{box-sizing:border-box} 
-
-.submit_button {
-background-color: darkgreen;
-min-height: 45px;
-}
-
-form{
-margin-left:auto;
-margin-right:auto;
-}
-/* Add a background color to the submit button on mouse-over */
-input[type=submit]:hover {
-  background-color: #45a049;
-} 
 body {
-background-color:black;
+background: radial-gradient(#d3e1f2, transparent);
 }
 </style>
-</head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="/docs/4.1/assets/img/favicons/favicon.ico">
 
+    <title>Signin Template for Bootstrap</title>
 
-<header>
-<h1 class="display-1"> Panel login </h1>
-                    <h3>Rango CMS panel</h3>
-</div>
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/sign-in/">
 
-</header>
+    <!-- Bootstrap core CSS -->
+    <link href="https://getbootstrap.com/docs/4.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<body>
-<div class="user-logo">
-                    <div class="img" style="background-image: url(/static/images/rango.jpeg);"></div>
- 
-<div style="display:flex;">
-<form method="POST" action="">
- <div class="form-group">
-{% csrf_token %}
-{{ form.as_p }}
+    <!-- Custom styles for this template -->
+    <link href="https://getbootstrap.com/docs/4.1/examples/sign-in/signin.css" rel="stylesheet">
+  </head>
 
-<button type="submit" class="btn btn-lg btn-primary btn-block submit">login</button>
-</div>
-</form>
-</div>
-</body>
+  <body class="text-center">
+    <form class="form-signin" action="" method="POST">
+      <img class="mb-4" src={% static 'images/rango.jpeg' %} alt="" width="72" height="72">
+      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        {% csrf_token %}
+{% for field in form %}
+{% if not forloop.last %}
+    {{ field }}
+{% else %}
+      <div class="checkbox mb-3">
+         {{ field }} Remember me
+      </div>
+{% endif %}
+{% endfor %}
+
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <p class="mt-5 mb-3 text-muted">&copy; 2021 Phalanthus</p>
+    </form>
+  </body>
 </html>
+
