improved blog template. Updated readme added screenshots

--- a/website/blog/templates/article.html
+++ b/website/blog/templates/article.html
@@ -17,14 +17,17 @@
 
 <style>
 
-
 .cats {
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
   background-color: black;
-  padding: 0.1em;
+  padding: 0.3em;
   border-radius: 5px;  
 }
-
+ 
+.container-fluid {
+    margin-right: auto;
+    margin-left: auto;
+}
  
 .cats a {
   font-size: 15px;
@@ -61,21 +64,19 @@ margin-left: auto;
 margin-right: auto;
 
 }
+
 .row {
 
 margin-left: auto;
 margin-right: auto;
 
 }
-
 body {
 			font-family: "Lato", sans-serif;
 			-webkit-font-smoothing: antialiased;
 
 }
-h1, h2, h3 {
-margin: 0 0 0.35em;
-}
+
 </style>
 
     <meta charset="UTF-8">
@@ -159,9 +160,20 @@ margin: 0 0 0.35em;
 
 
 
-    <footer>
-<span>copyright Phalanthus 2021</span>
-</footer>
+
+<footer class="text-center text-lg-start bg-light text-muted">
+         <!-- Copyright -->
+          <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+
+        <span>copyright Phalanthus 2021</span>
+         <!-- Copyright -->
+
+        <a class="text-reset fw-bold" href="#">Rango CMS</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
+
+
 
 </body>
 </div>
