--- a/website/blog/templates/article.html
+++ b/website/blog/templates/article.html
@@ -136,7 +136,7 @@ body {
     <div class="row mb-2">
 
     {% if article %}
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 52rem; margin-left: auto; margin-right: auto;">
 <img src="{{ MEDIA_URL }}/{{article.img}}" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">{{ article.title }}</h5>
