--- a/website/blog/templates/index.html
+++ b/website/blog/templates/index.html
@@ -123,7 +123,7 @@ body {
       <div class="card-body">
         <h5 class="card-title">{{ c.title }}</h5>
         {% with ct=c.content|safe %}
-        <p class="card-text">{{ ct|slice:"500"}}...</p>
+        <p class="card-text">{{ ct|truncatechars_html:"500"}}...</p>
         {% endwith %}
 
 
