Refactored templates for less redundancy.

--- a/website/blog/templates/index.html
+++ b/website/blog/templates/index.html
@@ -1,171 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-{% load static %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<!--
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
--->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400"/>
-<link rel="stylesheet" href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css"/>
+{% extends "base_blog.html" %}
 
-
-<link href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" rel="stylesheet">
-
-
-<!--
-<script src="{% static 'script.js' %}"></script>
--->
-
-
-<style>
-
-.cats {
-  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
-  background-color: black;
-  padding: 0.3em;
-  border-radius: 5px;  
-}
- 
-.container-fluid {
-    margin-right: auto;
-    margin-left: auto;
-}
- 
-.cats a {
-  font-size: 15px;
-  text-decoration: none;
-}
-
-.cats span{
-  display: inline-block;
-}
-
-
-.cats .cat {
-  border: 1px solid #dee2e5;
-  background-color: #dee2e5;
-  border-radius: 5px;
-  padding: 1px 2px;
-  color: #8199A3;
-  transition: all 300ms ease-in-out;
-  margin-bottom: 20px;
-}
-
-.cats .cat:hover{
-  color: #fff;
-  background-color: #5659C9;
-}
-
-main, footer {
-
-    margin-left: auto;
-    margin-right: auto;
-}
-header{
-margin-left: auto;
-margin-right: auto;
-
-}
-
-.row {
-
-margin-left: auto;
-margin-right: auto;
-
-}
-body {
-			font-family: "Lato", sans-serif;
-			-webkit-font-smoothing: antialiased;
-
-}
-</style>
-
-    <meta charset="UTF-8">
-    <title>home</title>
-</head>
-<div class="container-fluid">
-<header>
-
-
-<nav class = "navbar navbar-expand-md navbar-dark bg-dark">
-<div class="collapse navbar-collapse">
-<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-<li class="nav-item"><a class="nav-link" href="/"> home </a> </li>
-{% for c in categories %}
-
-{% if forloop.first %}
-    <li class="nav-item active"><a class="nav-link" href="category/{{c.slug}}">
-    {{c.name}}
-    </a>
-    </li>
-{% else %}
-<li class="nav-item"><a class="nav-link disabled" href="category/{{c.slug}}">
-    {{c.name}}
-    </a>
-    </li>
-{% endif %}
-
-   {% endfor %}
-   </ul>
-</div>
-</nav>
-</header>
-
-    <body>
-    <main>
-    <div class="row mb-2">
-
-    {% for c in articles %}
-    <div class="card" style="width: 18rem;">
-    <img src="{{ MEDIA_URL }}/{{c.img}}" class="card-img-top" alt="...">
-
-      <div class="card-body">
-        <h5 class="card-title">{{ c.title }}</h5>
-        {% with ct=c.content|safe %}
-        <p class="card-text">{{ ct|truncatechars_html:"500"}}...</p>
-        {% endwith %}
-
-
-
-       
-    <div class="card-footer">
-          <medium class="text-muted">{{ article.author }}</medium>
-    <div class="cats">
-        {% for category in c.categories.all %}
-      <a href="/category/{{ category.slug }}"><small class="cat text-muted">{{ category.name }}</small></a>
-        {% endfor %}
-    </div>
-
-    <div style="margin-top:1em;">
-     <a href="/article/{{c.slug}}" class="btn btn-primary">Continue</a>
-    </div>
-
-
-         </div>
-         
-      </div>
-    </div>
-    {% endfor %}
-
-    </div>
-    </main>
-
-<footer class="text-center text-lg-start bg-light text-muted">
-         <!-- Copyright -->
-          <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-
-        <span>copyright Phalanthus 2021</span>
-         <!-- Copyright -->
-
-        <a class="text-reset fw-bold" href="#">Rango CMS</a>
-      </div>
-      <!-- Copyright -->
-    </footer>
-
-
-
-
-</body>
-</div>
-</html>
