--- a/website/blog/templates/article.html
+++ b/website/blog/templates/article.html
@@ -1,94 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-{% load static %}
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<!--
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
--->
-<link href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400"/>
-<link rel="stylesheet" href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css"/>
-<!--
-<script src="{% static 'script.js' %}"></script>
--->
+{% extends "base_blog.html" %}
 
 
-<style>
 
-.cats {
-  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
-  background-color: black;
-  padding: 0.3em;
-  border-radius: 5px;  
-}
- 
-.container-fluid {
-    margin-right: auto;
-    margin-left: auto;
-}
- 
-.cats a {
-  font-size: 15px;
-  text-decoration: none;
-}
-
-.cats span{
-  display: inline-block;
-}
-
-
-.cats .cat {
-  border: 1px solid #dee2e5;
-  background-color: #dee2e5;
-  border-radius: 5px;
-  padding: 1px 2px;
-  color: #8199A3;
-  transition: all 300ms ease-in-out;
-  margin-bottom: 20px;
-}
-
-.cats .cat:hover{
-  color: #fff;
-  background-color: #5659C9;
-}
-
-main, footer {
-
-    margin-left: auto;
-    margin-right: auto;
-}
-header{
-margin-left: auto;
-margin-right: auto;
-
-}
-
-.row {
-
-margin-left: auto;
-margin-right: auto;
-
-}
-body {
-			font-family: "Lato", sans-serif;
-			-webkit-font-smoothing: antialiased;
-
-}
-
-</style>
-
-    <meta charset="UTF-8">
-    <title>home</title>
-</head>
-
-<div class="container-fluid">
-    <header>
-    <nav class = "navbar navbar-expand-md navbar-dark bg-dark">
-    <div class="collapse navbar-collapse">
-    <ul class="navbar-nav mr-auto">
-   <li class="nav-item"><a class="nav-link disabled" href="/"> home </a> </li> 
+{% block menu_categories %}
     {% for c in categories %}
 
     {% if forloop.first %}
@@ -104,37 +18,9 @@ body {
     {% endif %}
 
        {% endfor %}
-       </ul>
-    </div>
-    </nav>
-    </header>
+{% endblock %}
 
-    <body>
-    <!--
-    <nav>
-    <ul>
-    {% for c in category %}
-    {% if forloop.first %}
-        <li class="active"><a href="{{c.slug}}">
-        {{c.name}}
-        </a>
-        </li>
-    {% else %}
-    <li><a href="{{c.slug}}">
-        {{c.name}}
-        </a>
-        </li>
-    {% endif %}
-
-       {% endfor %}
-       </ul>
-    </nav>
-    --!>
-
-    <main>
-
-    <div class="row mb-2">
-
+{% block content %}
     {% if article %}
     <div class="card" style="width: 52rem; margin-left: auto; margin-right: auto;">
 <img src="{{ MEDIA_URL }}/{{article.img}}" class="card-img-top" alt="...">
@@ -155,26 +41,4 @@ body {
       </div>
     </div>
     {% endif %}
-    </div>
-    </main>
-
-
-
-
-<footer class="text-center text-lg-start bg-light text-muted">
-         <!-- Copyright -->
-          <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-
-        <span>copyright Phalanthus 2021</span>
-         <!-- Copyright -->
-
-        <a class="text-reset fw-bold" href="#">Rango CMS</a>
-      </div>
-      <!-- Copyright -->
-    </footer>
-
-
-
-</body>
-</div>
-</html>
+{% endblock %}
